Fix typo in description paragraph. v1.1

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
             <main id="content">
                 <h2>О сайте</h2>
-                <p>Это пример простой визитки. Здесь можно разместить описание услуг, преимушества и контакты.</p>
+                <p>Это пример простой визитки. Здесь можно разместить описание услуг, преимущества и контакты.</p>
                     
                     <div class="news">
                         <h3>Последние новости</h3>
