Fix typo in index.html description v 1.2
Corrected a typo in the description paragraph.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Main Page Visit</title>
+        <meta name="google-site-verification" content="SSmao8CUkQF4T5xEnVIvAqmdLfuLQfUrkjwR3gdnnLk" />
         <link rel="stylesheet" href="stile.css">
     </head>
     <body>
@@ -12,7 +13,7 @@
                 <h1 class="page-title">
                     Моя визитка - Никита А.
                 </h1>
-                    <p>Простая и аккуратная страницв для kwork.</p>
+                    <p>Простая и аккуратная страница для kwork.</p>
                     <a href="#" class="btn">Оставить заявку</a>
             </header>
 
